[gd_scene load_steps=6 format=3 uid="uid://be5xe1ejj8plo"]

[ext_resource type="TileSet" uid="uid://b26xocwdkhvvs" path="res://Levels/Rooms/Floor1.tres" id="1_4b2xn"]
[ext_resource type="PackedScene" uid="uid://biet0vjlr3djd" path="res://Levels/FunctionalRooms/ProgressLockedDoor.tscn" id="2_mla25"]
[ext_resource type="Script" path="res://Levels/FunctionalRooms/BossRoom.gd" id="2_u1bp8"]
[ext_resource type="AudioStream" uid="uid://ccu1op72wfcsj" path="res://Resources/level_clear.wav" id="4_xbkcn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ms5u0"]
size = Vector2(80, 20)

[node name="BossRoom" type="TileMap"]
tile_set = ExtResource("1_4b2xn")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 196608, 3, -65537, 196608, 3, -65536, 262144, 3, -131072, 262144, 3, -131071, 262144, 1, -131073, 196608, 3, -196609, 196608, 3, -262145, 196608, 3, -327681, 196608, 3, -196608, 262144, 3, -262144, 262144, 3, -327680, 262144, 3, -393216, 262144, 3, -131074, 0, 4, -196610, 0, 4, -262146, 0, 4, -327682, 131072, 6, -393215, 196608, 6, -327679, 131072, 4, -262143, 131072, 4, -196607, 131072, 4, -393220, 262144, 3, -393221, 262144, 3, -458744, 262144, 3, -524280, 262144, 3, -589816, 262144, 3, -655352, 262144, 3, -720888, 262144, 3, -786424, 262144, 3, -851960, 262144, 3, -917496, 262144, 3, -983032, 262144, 3, -1048568, 262144, 3, -1114104, 262144, 3, -1179640, 262144, 2, -458745, 262144, 3, -524281, 262144, 3, -589817, 262144, 3, -655353, 262144, 3, -720889, 262144, 3, -786425, 262144, 3, -851961, 262144, 3, -917497, 262144, 3, -983033, 262144, 3, -1048569, 262144, 3, -1114105, 262144, 3, -1179641, 262144, 2, -458746, 262144, 3, -524282, 262144, 3, -589818, 262144, 3, -655354, 262144, 3, -720890, 262144, 3, -786426, 262144, 3, -851962, 262144, 3, -917498, 262144, 3, -983034, 262144, 3, -1048570, 262144, 3, -1114106, 262144, 3, -1179642, 262144, 2, -458747, 262144, 3, -524283, 262144, 3, -589819, 262144, 3, -655355, 262144, 3, -720891, 262144, 3, -786427, 262144, 3, -851963, 262144, 3, -917499, 262144, 3, -983035, 262144, 3, -1048571, 262144, 3, -1114107, 262144, 3, -1179643, 262144, 2, -458748, 262144, 3, -524284, 262144, 3, -589820, 262144, 3, -655356, 262144, 3, -720892, 262144, 3, -786428, 262144, 3, -851964, 262144, 3, -917500, 262144, 3, -983036, 262144, 3, -1048572, 262144, 3, -1114108, 262144, 3, -1179644, 262144, 2, -458749, 262144, 3, -524285, 262144, 3, -589821, 262144, 3, -655357, 262144, 3, -720893, 262144, 3, -786429, 262144, 3, -851965, 262144, 3, -917501, 262144, 3, -983037, 262144, 3, -1048573, 262144, 3, -1114109, 262144, 3, -1179645, 262144, 2, -458750, 262144, 3, -524286, 262144, 3, -589822, 262144, 3, -655358, 262144, 3, -720894, 262144, 3, -786430, 262144, 3, -851966, 262144, 3, -917502, 262144, 3, -983038, 262144, 3, -1048574, 262144, 3, -1114110, 262144, 3, -1179646, 262144, 2, -458751, 262144, 3, -524287, 262144, 3, -589823, 262144, 3, -655359, 262144, 3, -720895, 262144, 3, -786431, 262144, 3, -851967, 262144, 3, -917503, 262144, 3, -983039, 262144, 3, -1048575, 262144, 3, -1114111, 262144, 3, -1179647, 262144, 2, -458752, 262144, 3, -524288, 262144, 3, -589824, 262144, 3, -655360, 262144, 3, -720896, 262144, 3, -786432, 262144, 3, -851968, 262144, 3, -917504, 262144, 3, -983040, 262144, 3, -1048576, 262144, 3, -1114112, 262144, 3, -1179648, 262144, 2, -393217, 262144, 3, -458753, 262144, 3, -524289, 262144, 3, -589825, 262144, 3, -655361, 262144, 3, -720897, 262144, 3, -786433, 262144, 3, -851969, 262144, 3, -917505, 262144, 3, -983041, 262144, 3, -1048577, 262144, 3, -1114113, 262144, 2, -393218, 262144, 3, -458754, 262144, 3, -524290, 262144, 3, -589826, 262144, 3, -655362, 262144, 3, -720898, 262144, 3, -786434, 262144, 3, -851970, 262144, 3, -917506, 262144, 3, -983042, 262144, 3, -1048578, 262144, 3, -1114114, 262144, 2, -393219, 262144, 3, -458755, 262144, 3, -524291, 262144, 3, -589827, 262144, 3, -655363, 262144, 3, -720899, 262144, 3, -786435, 262144, 3, -851971, 262144, 3, -917507, 262144, 3, -983043, 262144, 3, -1048579, 262144, 3, -1114115, 262144, 2, -458756, 262144, 3, -524292, 262144, 3, -589828, 262144, 3, -655364, 262144, 3, -720900, 262144, 3, -786436, 262144, 3, -851972, 262144, 3, -917508, 262144, 3, -983044, 262144, 3, -1048580, 262144, 3, -1114116, 262144, 2, -458757, 262144, 3, -524293, 262144, 3, -589829, 262144, 3, -655365, 262144, 3, -720901, 262144, 3, -786437, 262144, 3, -851973, 262144, 3, -917509, 262144, 3, -983045, 262144, 3, -1048581, 262144, 3, -1114117, 262144, 2, -393222, 262144, 3, -458758, 262144, 3, -524294, 262144, 3, -589830, 262144, 3, -655366, 262144, 3, -720902, 262144, 3, -786438, 262144, 3, -851974, 262144, 3, -917510, 262144, 3, -983046, 262144, 3, -1048582, 262144, 3, -1114118, 262144, 2, -393223, 262144, 3, -458759, 262144, 3, -524295, 262144, 3, -589831, 262144, 3, -655367, 262144, 3, -720903, 262144, 3, -786439, 262144, 3, -851975, 262144, 3, -917511, 262144, 3, -983047, 262144, 3, -1048583, 262144, 3, -1114119, 262144, 2, -393224, 262144, 3, -458760, 262144, 3, -524296, 262144, 3, -589832, 262144, 3, -655368, 262144, 3, -720904, 262144, 3, -786440, 262144, 3, -851976, 262144, 3, -917512, 262144, 3, -983048, 262144, 3, -1048584, 262144, 3, -1114120, 262144, 2, -393225, 196608, 3, -458761, 196608, 3, -524297, 196608, 3, -589833, 196608, 3, -655369, 196608, 3, -720905, 196608, 3, -786441, 196608, 3, -851977, 196608, 3, -917513, 196608, 3, -983049, 196608, 3, -1048585, 196608, 3, -1114121, 196608, 2, -1245176, 131072, 1, -1310712, 393216, 0, -1376248, 131072, 0, -1245177, 65536, 1, -1310713, 327680, 0, -1376249, 65536, 0, -1245178, 65536, 1, -1310714, 327680, 0, -1376250, 65536, 0, -1245179, 65536, 1, -1310715, 327680, 0, -1376251, 65536, 0, -1245180, 65536, 1, -1310716, 327680, 0, -1376252, 65536, 0, -1245181, 65536, 1, -1310717, 327680, 0, -1376253, 65536, 0, -1245182, 65536, 1, -1310718, 327680, 0, -1376254, 65536, 0, -1245183, 65536, 65537, -1310719, 327680, 65536, -1376255, 65536, 65536, -1179650, 65536, 65537, -1245186, 327680, 65536, -1179651, 65536, 1, -1245187, 327680, 0, -1310723, 65536, 0, -1179652, 65536, 1, -1245188, 327680, 0, -1310724, 65536, 0, -1179653, 65536, 1, -1245189, 327680, 0, -1310725, 65536, 0, -1179654, 65536, 1, -1245190, 327680, 0, -1310726, 65536, 0, -1179655, 65536, 1, -1245191, 327680, 0, -1310727, 65536, 0, -1179656, 65536, 1, -1245192, 327680, 0, -1310728, 65536, 0, -1179657, 0, 1, -1245193, 262144, 0, -1310729, 0, 0, -1310730, 0, 3, -1376247, 131072, 3, -1310711, 131072, 4, -1245175, 131072, 4, -1179639, 131072, 4, -1114103, 131072, 4, -1048567, 131072, 4, -983031, 131072, 4, -917495, 131072, 4, -851959, 131072, 4, -786423, 131072, 4, -720887, 131072, 4, -655351, 131072, 4, -589815, 131072, 4, -524279, 131072, 4, -458743, 131072, 4, -1245194, 0, 4, -1179658, 0, 4, -1114122, 0, 4, -1048586, 0, 4, -983050, 0, 4, -917514, 0, 4, -851978, 0, 4, -786442, 0, 4, -720906, 0, 4, -655370, 0, 4, -589834, 0, 4, -524298, 0, 4, -458762, 0, 4, -393226, 0, 4, -327690, 0, 5, -393207, 131072, 5, -327689, 65536, 5, -327688, 65536, 5, -327687, 65536, 5, -327686, 65536, 5, -327685, 65536, 5, -327684, 65536, 5, -327683, 65536, 5, -393214, 65536, 5, -393213, 65536, 5, -393212, 65536, 5, -393211, 65536, 5, -393210, 65536, 5, -393209, 65536, 5, -393208, 65536, 5, -1310722, 65536, 65536, -65538, 393216, 1, 65535, 196608, 3, 0, 262144, 3, 131071, 327680, 2, 65536, 262144, 3, -2, 393216, 0, 65534, 131072, 1, -65535, 262144, 0, 1, 0, 1)
layer_1/tile_data = PackedInt32Array(-1048575, 196608, 10, -1114111, 196608, 8, -1179647, 196608, 8, -1245183, 196608, 8, -1310719, 196608, 8, -1376255, 196608, 8, -1048576, 65536, 10, -1114112, 65536, 8, -1179648, 65536, 8, -1245184, 65536, 8, -1310720, 65536, 8, -1376256, 65536, 8, -983041, 65536, 10, -1048577, 65536, 8, -1114113, 65536, 8, -1179649, 65536, 8, -1245185, 65536, 8, -1310721, 65536, 8, -983042, 0, 10, -1048578, 0, 8, -1114114, 0, 8, -1179650, 0, 8, -1245186, 0, 8, -1310722, 0, 8, -1441791, 196608, 7, -1441792, 65536, 7, -1376257, 65536, 7, -1376258, 0, 7)
script = ExtResource("2_u1bp8")

[node name="ProgressLockedDoorRight" parent="." instance=ExtResource("2_mla25")]
position = Vector2(16, -16)
scale = Vector2(-1, 1)

[node name="ProgressLockedDoorLeft" parent="." instance=ExtResource("2_mla25")]
position = Vector2(-16, -16)

[node name="Label" type="Label" parent="."]
offset_left = -55.0
offset_top = -383.0
offset_right = 54.0
offset_bottom = -360.0
text = "No boss yet :(("

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="BossRoomArea2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BossRoomArea2D"]
polygon = PackedVector2Array(-302, -672, 302, -672, 302, -180, 46, -180, 46, -82, -46, -82, -46, -180, -302, -180)

[node name="WinArea2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WinArea2D"]
position = Vector2(0, -618)
shape = SubResource("RectangleShape2D_ms5u0")

[node name="ClearAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_xbkcn")
volume_db = -10.0
max_distance = 1e+08

[connection signal="area_entered" from="BossRoomArea2D" to="." method="_on_boss_room_area_2d_area_entered"]
[connection signal="area_exited" from="BossRoomArea2D" to="." method="_on_boss_room_area_2d_area_exited"]
[connection signal="area_entered" from="WinArea2D" to="." method="_on_win_area_2d_area_entered"]
